--- a/Kexts/VoodooI2C.kext/Contents/Info.plist
+++ b/Kexts/VoodooI2C.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19E266</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E503a</string>
+	<string>11E801a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1141</string>
+	<string>1170</string>
 	<key>DTXcodeBuild</key>
-	<string>11E503a</string>
+	<string>11E801a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>Custom MT2 Personality</key>
@@ -531,6 +531,7 @@
 			<key>IONameMatch</key>
 			<array>
 				<string>pci8086,34e8</string>
+				<string>pci8086,34e9</string>
 				<string>pci8086,6e8</string>
 				<string>pci8086,6e9</string>
 				<string>pci8086,2e8</string>
